envoy-config.yaml

static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 9211
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config: {}
                route_config:
                  name: serve555
                  virtual_hosts:
                  - name: service
                    domains:
                    - "*"
                    routes:
                    - match:
                        prefix: /
                      response_headers_to_add:
                      - append: false
                        header:
                          key: Content-Type
                          value: 'application/json'
                      direct_response:
                        status: 555
                        body: 
                          filename: "/etc/envoy/direct-response.json"
